@@ -37,11 +37,12 @@
 package com.sun.jersey.spi.container;
 
 /**
-* A resource filter to be used to filter a resource method,
-* a sub-resource method, or a sub-resource locator.
-*
-* @author Paul.Sandoz@Sun.Com
-*/
+ * A resource filter to be used to filter a resource method,
+ * a sub-resource method, or a sub-resource locator.
+ *
+ * @author Paul.Sandoz@Sun.Com
+ * @see com.sun.jersey.api.container.filter
+ */
 public interface ResourceFilter {
 
    /**
